--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap');
 
-
+body {
+    background-color: black;
+    font-family: Khand;
+}
 
