--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+
+}
+
+
+
 body {
     background-color: black;
     color:white;
     font-family: "Khand", sans-serif;
 }
 
+
+#logo {
+    display: flex;
+}
