--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 
 #logo {
     display: flex;
-
+    justify-content: center;
 }
 
 #logo h2 {
-    margin: auto 0;
+    justify-content: center;
 }
