--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@ body {
     font-family: "Khand", sans-serif;
 }
 
+header{
+    width: 100%;
+    height: 226px;
+    background:linear-gradient(#992BCD, #d9d9d904) ;
+}
+
 
 #logo {
     display: flex;
-    justify-content: center;
 }
-
 #logo h2 {
-    justify-content: center;
+    line-height: 226px;
 }
