--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 header{
     width: 100%;
-    height: 226px;
+    height: 25vh;
     background:linear-gradient(#992BCD, #d9d9d904) ;
 }
 
