--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@ header{
 
 header li {
     display: inline;
-    margin: auto 0;
+    padding: 20px;
+    background-color: #5E51AE;
+    color: white;
+    
+
 }
+
 
 #logo {
     display: flex;
