--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header{
 
 #buttons {
     display: inline;
-    padding: 20px;
+    margin: 20px;
     background-color: #5E51AE;
     color: white;
     border: 2px solid white;
