--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header{
 #buttons {
     display: inline;
     margin: auto 0;
+    float: right;
 }
 
 #buttons button {
@@ -43,6 +44,7 @@ header{
 #logo {
     display: flex;
     margin:auto 20px;
+    
 }
 #logo span {
     margin: auto 0;
