--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
 #buttons {
     display: inline;
     margin: auto 0;
-    float: right;
+    float: left;
 }
 
 #buttons button {
@@ -44,7 +44,7 @@ header{
 #logo {
     display: flex;
     margin:auto 20px;
-    
+
 }
 #logo span {
     margin: auto 0;
