--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ header{
 
 #buttons {
     display: inline;
-    margin: auto 0;
-    float: inline-end;
+    margin: auto 50% auto 0;
+
 }
 
 #buttons button {
