--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ header{
 }
 
 #buttons button:hover {
-    background-color: #29234e;
-    color: white;
+    background-color: #9893bb;
+    color: rgb(0, 0, 0);
 }
 
 
