--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 header{
     width: 100%;
     height: 30vh;
-    background:linear-gradient(#992BCD,#5E51AE, #d9d9d900) ;
+    background:linear-gradient(#992BCD,#5E51AE) ;
     display: flex;
 
 }
