--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ header{
 #buttons {
     display: inline;
     margin: auto 0 auto 0;
-    float: right;
-
+    text-align: end;
 }
 
 #buttons button {
