--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 header{
     width: 100%;
     height: 30vh;
-    background:linear-gradient(#9531CF,#9531CF,#5E51AE,rgba(10, 10, 10, 0)) ;
+    background:linear-gradient(#9531CF,#5E51AE,rgb(10, 10, 10,0)) ;
     display: flex;
 
 }
