--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@
 
 }
 
-
-
 body {
     background-color: black;
     color:white;
     font-family: "Khand", sans-serif;
 }
+
+
+
+/* CABEÇALHO */
 
 header{
     width: 100%;
@@ -57,3 +59,5 @@ header{
     margin: auto 0;
     font-size: 40px;
 }
+
+
