--- a/style.css
+++ b/style.css
@@ -76,5 +76,7 @@ header{
 #container01 h2 {
     background-color: #5E51AE;
     border-radius: 8px;
+    font-size: 40px;
+    font-weight: unset;
 
 }
