--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header{
 
 #container01 h2 {
     background-color: #5E51AE;
-    border-radius: 8px 0 8px 0;
+    border-radius: 8px 8px 0 0;
     font-size: 40px;
     font-weight: unset;
     padding: 50px;
