--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header{
 }
 
 #container01 h2 {
-    background-color: #5E51AE;
+    background-color: #992BCD;
     border: 2px solid transparent;
     border-radius: 8px 8px 0 0;
     font-size: 40px;
