--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ header{
 #container01 {
     border: 2px solid white;
     border-radius: 8px;
-    text-align: center;
     height: 100vh;
     width: 150vh;
     margin: 100px auto;
@@ -80,9 +79,11 @@ header{
     font-size: 40px;
     font-weight: unset;
     padding: 50px;
+    text-align: center;
 
 }
 
 #container p {
-    font-size: 20px;
+    font-size: 25px;
+    margin: 0 20px 0 0;
 }
