--- a/style.css
+++ b/style.css
@@ -91,11 +91,18 @@ header{
 
 /* Segunda seção [ Sistema Solar ] */
 
+#sec02 h2 {
+    font-size: 60px;
+    font-weight: unset;
+    text-align: center;
+    
+}
+
+
+
 #sol {
     background-color: #E7B22B;
     border-radius: 50%;
     height: 480px;
     width: 480px;
-    font-size: 60px;
-    font-weight: unset;
 }
