--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ header{
     font-size: 60px;
     font-weight: unset;
     text-align: center;
-    
+
 }
 
 
@@ -105,4 +105,5 @@ header{
     border-radius: 50%;
     height: 480px;
     width: 480px;
+    box-shadow: 9px 4px 100px 0 #ff5e00f5;
 }
