--- a/style.css
+++ b/style.css
@@ -137,4 +137,31 @@ header{
     margin: 20px 20px;
 }
 
+/* Quarta seção */
+
+#container03 {
+    border: 2px solid white;
+    border-radius: 8px;
+    height: 50vh;
+    width: 100vh;
+    margin: 700px 50px;
+    float: right;
+
+}
+
+#container03 h2 {
+    background-color: #992BCD;
+    border: 2px solid transparent;
+    border-radius: 8px 8px 0 0;
+    font-size: 40px;
+    font-weight: unset;
+    padding: 50px;
+    text-align: center;
+
+}
+
+#container03 p {
+    font-size: 25px;
+    margin: 20px 20px;
+}
 
