--- a/style.css
+++ b/style.css
@@ -99,7 +99,9 @@ header{
 
 }
 
-
+#container02 {
+    display: inline-block;
+}
 
 #sol {
     background-color: #E7B22B;
@@ -107,7 +109,6 @@ header{
     height: 480px;
     width: 480px;
     box-shadow: 9px 4px 100px 0 #ff5e00e0;
-    display: inline-block;
     float: left;
 }
 
