--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #4A4747;
+    background-color: #0000004b;
     color:white;
     font-family: "Khand", sans-serif;
 }
