--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ header{
 /* Segunda seção [ Sistema Solar ] */
 
 
+#sec01 {
+    height: 100vh;
+}
+
 #sec02 h2 {
     font-size: 60px;
     font-weight: unset;
