--- a/style.css
+++ b/style.css
@@ -171,3 +171,9 @@ header{
     margin: 20px 20px;
 }
 
+/* Cabeçalho  */ 
+
+footer {
+    height: 350px;
+    background: linear-gradient(#6D3C93, #0A090A);
+}
