--- a/style.css
+++ b/style.css
@@ -150,10 +150,8 @@ header{
     border-radius: 8px;
     height: 50vh;
     width: 100vh;
-    margin: 0px 50px;
+    margin: 0px 50px 100px 50px;
     float: right;
-    display: block;
-
 }
 
 #container04 h2 {
