--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ header{
 /* Cabeçalho  */ 
 
 footer {
+
+    float: inline-end;
     height: 350px;
 
     background: linear-gradient(#6D3C93, #0A090A);
