--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ footer {
     width: 100%;
     background: linear-gradient(#6D3C93, #0A090A);
     float: inline-end;
+    margin-top: 60px;
 
 }
 
