--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 }
 
 body {
-    background-color: #000000f3;
+    /*background-color: #000000f3;*/
+    background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
     color:white;
     font-family: "Khand", sans-serif;
 }
