--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     /*background-color: #000000f3;*/
     background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
-    overflow: hidden;
+    overflow: scroll;
     color:white;
     font-family: "Khand", sans-serif;
 }
