--- a/style.css
+++ b/style.css
@@ -17,12 +17,6 @@ body {
 
 /* ESTRELAS  */
 
-.wrapper {
-    z-index: 1;
-}
-
-
-
 #stars {
     width: 1px;
     height: 1px;
@@ -595,9 +589,9 @@ body {
 header{
     width: 100%;
     height: 30vh;
-    background:linear-gradient(#9531CF 0% ,#5d51ae48 70%, #090a0f 100%) ;
+    background:linear-gradient(#9531CF ,#5d51ae48) ;
     display: flex;
-    z-index: 1000;
+
 
 }
 
