--- a/style.css
+++ b/style.css
@@ -589,9 +589,9 @@ body {
 header{
     width: 100%;
     height: 30vh;
-    background:linear-gradient(#9531CF ,#5d51ae48, #0A090A) ;
+    background:linear-gradient(#9531CF , #0A090A) ;
     display: flex;
-
+    /*#5d51ae48*/
 
 }
 
