--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ header{
     height: 50vh;
     display: inline-block;
 }
-
+/*
 #sol {
     background-color: #E7B22B;
     border-radius: 50%;
@@ -686,7 +686,7 @@ header{
     box-shadow: 9px 4px 100px 0 #ff5e00e0;
     float: left;
 }
-
+*/
 
 /* Terceira seção */
 
