--- a/style.css
+++ b/style.css
@@ -679,8 +679,7 @@ header{
 }
 
 #sol img{
-    height: 480px;
-    width: 480px;
+    border-radius: 50%;
     box-shadow: 0px 4px 100px 0 #ff5e00e0;
     float: left;
 }
