--- a/style.css
+++ b/style.css
@@ -682,6 +682,8 @@ header{
 #sol {
     border-radius: 50% 0 50% 0;
     box-shadow: 20px 40px 100px 0 #ff5e00e0;
+    height: 100px;
+    width: 100px;
 }
 
 /*
