--- a/style.css
+++ b/style.css
@@ -689,7 +689,7 @@ header{
 
 #sol img{
     box-shadow: 40px 100px 100px 0 #ff5e00e0;
-    border-radius:50% ;
+    border-radius: 0 50% 50% 50%;
     float: left;
 }
 
