--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ header{
 */
 
 #sol img{
-    box-shadow: 0px 100px 100px 0 #ff5e00e0;
+    box-shadow: 0px 100px 100px 300px #ff5e00e0;
     border-radius: 0 50% 50% 0;
     float: left;
 }
