--- a/style.css
+++ b/style.css
@@ -689,7 +689,7 @@ header{
 
 #sol img{
     box-shadow: 0px 0px 100px 100px #ff5e00e0;
-    border-radius: 286px;
+    border-radius: 100px 286px 286px 100px;
     float: left;
 }
 
