--- a/style.css
+++ b/style.css
@@ -688,7 +688,8 @@ header{
 */
 
 #sol img{
-    box-shadow: 0px 0px 100px 100px #ff5e00e0;
+   /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
+    filter: drop-shadow(5px 5px 5px #ff5e00e0);
     border-radius: 120px 286px 286px 120px;
     float: left;
 }
