--- a/style.css
+++ b/style.css
@@ -696,7 +696,7 @@ header{
 #sol img:hover {
     width: 306px;
     height: 380px;
-    cursor:progress;
+    cursor:pointer;
 }
 
 /* Terceira seção */
