--- a/style.css
+++ b/style.css
@@ -694,9 +694,8 @@ header{
 }
 
 #sol img:hover {
-    /*width: 306px;
-    height: 380px;*/
-    rotate: 5deg;
+    width: 306px;
+    height: 380px;
     cursor:pointer;
 }
 
