--- a/style.css
+++ b/style.css
@@ -711,6 +711,7 @@ header{
 
 /* Terceira seção */
 
+/*
 #container03 {
     border: 2px solid white;
     border-radius: 8px;
@@ -718,10 +719,10 @@ header{
     width: 100vh;
     margin: 100px 50px;
 
-}
+}*/
 
 #container03 h2 {
-    background-color: var(--color_section);
+    /*background-color: var(--color_section);*/
     border: 2px solid transparent;
     border-radius: 8px 8px 0 0;
     font-size: 40px;
