--- a/style.css
+++ b/style.css
@@ -734,7 +734,7 @@ header{
 
 }
 
-#container03 p {
+#container03 ul{
     font-size: 25px;
     margin: 20px 20px;
 }
@@ -762,7 +762,7 @@ header{
 
 }
 
-#container04 li {
+#container04 p {
     font-size: 25px;
     margin: 20px 20px;
 }
