--- a/style.css
+++ b/style.css
@@ -734,11 +734,17 @@ header{
 
 }
 
+#container03 ul {
+    margin-left: 10px;
+
+}
+
+
 #container03 li{
-    margin: 0 10px 0 0;
     font-size: 25px;
     margin: 20px 20px;
 }
+
 
 /* Quarta seção */
 
