--- a/style.css
+++ b/style.css
@@ -720,6 +720,7 @@ header{
     height: 70vh;
     width: 100vh;
     margin: 100px 50px;
+    background: linear-gradient(transparent 0%, #5d51ae48 50%, #9531CF 100% );
 
 }
 
