--- a/style.css
+++ b/style.css
@@ -774,6 +774,17 @@ header{
     margin: 20px 20px;
 }
 
+#container04 .person {
+    background-color: var(--color_text);
+    width: 500px;
+    height: 700px;
+    border: 2px solid black;
+    border-radius: 8px;
+    display: flex;
+
+}
+
+
 /* Cabeçalho  */ 
 
 footer {
