--- a/style.css
+++ b/style.css
@@ -776,7 +776,7 @@ header{
 
 #container04 #persons {
     display: flex;
-    text-align: center;
+    margin: 0 auto;
 }
 
 #container04 .person {
