--- a/style.css
+++ b/style.css
@@ -776,6 +776,7 @@ header{
 
 #container04 #persons {
     display: flex;
+    align-items: center;
 }
 
 #container04 .person {
@@ -785,7 +786,6 @@ header{
     height: 50vh;
     border: 2px solid black;
     border-radius: 8px;
-    text-align: center;
     
 
 }
