--- a/style.css
+++ b/style.css
@@ -786,7 +786,7 @@ header{
     height: 45vh;
     border: 2px solid black;
     border-radius: 8px;
-    margin-right: 30px;
+    margin-left: 30px;
     
 
 }
