--- a/style.css
+++ b/style.css
@@ -786,8 +786,7 @@ header{
     height: 45vh;
     border: 2px solid black;
     border-radius: 8px;
-    margin-left: 30px;
-    
+    margin: 0 30px;
 
 }
 
