--- a/style.css
+++ b/style.css
@@ -781,14 +781,15 @@ header{
 }
 
 #container04 .person {
+    text-align: center;
     background-color: var(--color_text);
+    color: black;
     display: flex;
     width: 35vh;
     height: 45vh;
     border: 2px solid black;
     border-radius: 8px;
     margin: 0 40px;
-    text-align: center;
 }
 
 
