--- a/style.css
+++ b/style.css
@@ -749,11 +749,6 @@ header{
 
 
 /* Quarta seção */
-#sec04 {
-    display: inline
-}
-
-
 
 #container04 {
     border: 2px solid white;
@@ -762,6 +757,7 @@ header{
     width: 150vh;
     margin: 0 auto;
     background: var(--color_section);
+    display: flex;
 }
 
 #container04 h2 {
