--- a/style.css
+++ b/style.css
@@ -688,14 +688,11 @@ header{
     display: inline-block;
 
 }
-/*
+
 #sol {
-    border-radius: 0 50% 50% 0;
-    box-shadow: 200px 1000px 100px 0 #ff5e00e0;
-    height: 150px;
-    width: 150px;
+   display: flex;
 }
-*/
+
 
 #sol img{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
