--- a/style.css
+++ b/style.css
@@ -696,6 +696,7 @@ header{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
     filter: drop-shadow(0px 0px 100px #ff5e00e0);
     float: left;
+    margin: auto 0 ;
    
 }
 
