--- a/style.css
+++ b/style.css
@@ -689,14 +689,15 @@ header{
 
 }
 
-
+#sol {
+    margin: auto 0 ;
+}
 
 
 #sol img{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
     filter: drop-shadow(0px 0px 100px #ff5e00e0);
     float: left;
-    margin: auto 0 ;
    
 }
 
