--- a/style.css
+++ b/style.css
@@ -718,7 +718,7 @@ header{
     rotate: 10deg;
 }
 
-.planets-big {
+.planets-big:hover {
     width: 400px;
     height: 400px;
     filter: drop-shadow(0px 0px 100px blue);
