--- a/style.css
+++ b/style.css
@@ -719,8 +719,8 @@ header{
 }
 
 .planets-big:hover {
-    width: 200px;
-    height: 200px;
+    width: 350px;
+    height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
