--- a/style.css
+++ b/style.css
@@ -721,7 +721,7 @@ header{
 .planets-big:hover {
     width: 350px;
     height: auto;
-    filter: drop-shadow(0px 0px 20px blue);
+    filter: drop-shadow(0px 0px 10px #222f70);
     cursor:pointer;
 }
 
