--- a/style.css
+++ b/style.css
@@ -718,6 +718,8 @@ header{
     rotate: 10deg;
 }
 
+
+
 .planets-big:hover {
     width: 350px;
     height: auto;
@@ -728,7 +730,7 @@ header{
 
 .planets:hover{
     width: 100px;
-    height: 100px;
+    height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
     
