--- a/style.css
+++ b/style.css
@@ -717,9 +717,6 @@ header{
 .planets #saturno {
     rotate: 10deg;
 }
-
-
-
 .planets-big:hover {
     width: 350px;
     height: auto;
@@ -727,7 +724,12 @@ header{
     cursor:pointer;
 }
 
-
+.planets #urano:hover {
+    width: 200px;
+    height: auto;
+    filter: drop-shadow(0px 0px 100px blue);
+    cursor:pointer;
+}
 .planets:hover{
     width: 100px;
     height: auto;
