--- a/style.css
+++ b/style.css
@@ -724,7 +724,7 @@ header{
     cursor:pointer;
 }
 
-.planets #urano:hover {
+#urano:hover {
     width: 200px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
