--- a/style.css
+++ b/style.css
@@ -718,9 +718,9 @@ header{
     rotate: 10deg;
 }
 .planets-big:hover {
-    width: 350px;
+    width: 300px;
     height: auto;
-    filter: drop-shadow(0px 0px 10px #222f70);
+    filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
 
