--- a/style.css
+++ b/style.css
@@ -709,9 +709,11 @@ header{
 
 .planets {
     margin: auto 2% ;
+    transition: 1s all;
 }
 .planets-big{
     margin: auto 2% ;
+    transition: 1s all;
 }
 
 .planets #saturno {
