--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ header{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
     filter: drop-shadow(0px 0px 100px #ff5e00e0);
     float: left;
-   
+    transition: 1s all;
 }
 
 #sol img:hover {
