--- a/style.css
+++ b/style.css
@@ -700,7 +700,7 @@ header{
     transition: 1s all;
 }
 
-#sol img:hover {
+#sol:hover {
     width: 306px;
     height: 380px;
     cursor:pointer;
