--- a/style.css
+++ b/style.css
@@ -706,11 +706,11 @@ header{
     cursor:pointer;
 }
 
-.planets {
+.planets img {
     margin: auto 2% ;
     transition: 1s all;
 }
-.planets-big{
+.planets-big img{
     margin: auto 2% ;
     transition: 1s all;
 }
@@ -718,20 +718,20 @@ header{
 .planets #saturno {
     rotate: 10deg;
 }
-.planets-big:hover {
+.planets-big img:hover {
     width: 300px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
 
-#urano:hover {
+#urano img:hover {
     width: 200px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
-.planets:hover{
+.planets img:hover{
     width: 100px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
