--- a/style.css
+++ b/style.css
@@ -698,6 +698,7 @@ header{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
     filter: drop-shadow(0px 0px 100px #ff5e00e0);
     float: left;
+    transition: 1s all;
 }
 
 #sol img:hover {
@@ -706,11 +707,11 @@ header{
     cursor:pointer;
 }
 
-.planets img {
+.planets {
     margin: auto 2% ;
     transition: 1s all;
 }
-.planets-big img{
+.planets-big{
     margin: auto 2% ;
     transition: 1s all;
 }
@@ -718,20 +719,20 @@ header{
 .planets #saturno {
     rotate: 10deg;
 }
-.planets-big img:hover {
+.planets-big:hover {
     width: 300px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
 
-#urano img:hover {
+#urano:hover {
     width: 200px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
-.planets img:hover{
+.planets:hover{
     width: 100px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
