--- a/style.css
+++ b/style.css
@@ -707,11 +707,11 @@ header{
     cursor:pointer;
 }
 
-.planets {
+.planets a {
     margin: auto 2% ;
     transition: 1s all;
 }
-.planets-big{
+.planets-big a{
     margin: auto 2% ;
     transition: 1s all;
 }
