--- a/style.css
+++ b/style.css
@@ -694,7 +694,7 @@ header{
 
 }
 
-#container02 div a{
+#container02{
     height: 0;
     margin: auto 0;
 }
@@ -717,14 +717,14 @@ header{
     cursor:pointer;
 }
 
-
-
-.planets{
+.planets {
     margin: auto 2% ;
-    transition: 1s all;
 }
 
 
+.planets img{
+    transition: 1s all;
+}
 
 .planets-big{
     margin: auto 2% ;
@@ -747,7 +747,7 @@ header{
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
 }
-.planets:hover{
+.planets img:hover{
     width: 100px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
