--- a/style.css
+++ b/style.css
@@ -711,9 +711,9 @@ header{
 }
 
 #sol img:hover {
-    width: 306px;
-    height: 380px;
     cursor:pointer;
+    width: 400px;
+    height: auto;
 }
 
 .planets {
@@ -738,7 +738,7 @@ header{
     rotate: 10deg;
 }
 .planets-big img:hover {
-    width: 300px;
+    width: 320px;
     height: auto;
     filter: drop-shadow(0px 0px 100px blue);
     cursor:pointer;
