--- a/style.css
+++ b/style.css
@@ -698,21 +698,21 @@ header{
     margin: auto 0;
 }
 
-#sol {
+.sol {
     margin: auto 0 ;
 }
 
 
-#sol img{
+.sol img{
    /* box-shadow: 0px 0px 100px 100px #ff5e00e0;*/
     filter: drop-shadow(0px 0px 100px #ff5e00e0);
     float: left;
     transition: 1s all;
 }
 
-#sol img:hover {
+.sol img:hover {
     cursor:pointer;
-    width: 400px;
+    width: 300px;
     height: auto;
 }
 
