--- a/style.css
+++ b/style.css
@@ -861,8 +861,9 @@ header{
     width: 200px;
     height: 200px;
     margin: 40px auto;
+    border: 3px solid var(--button_color_activate);
     border-radius: 50%;
-    
+
 }
 
 
